[xbase][typesystem] Don't depend on implementation details of LazyLinkingResource