@@ -173,43 +173,40 @@ public class LazyLinkingResource extends XtextResource {
 				try {
 					if (!resolving.add(triple))
 						return handleCyclicResolution(triple);
-					Set<String> unresolveableProxies = getCache().get(UNRESOLVEABLE_PROXIES_KEY, this,
-							new Provider<Set<String>>() {
-								public Set<String> get() {
-									return Sets.newHashSet();
-								}
-							});
+					Set<String> unresolveableProxies = getUnresolvableURIFragments();
 					if (unresolveableProxies.contains(uriFragment))
 						return null;
 					EReference reference = triple.getSecond();
-						List<EObject> linkedObjects = getLinkingService().getLinkedObjects(triple.getFirst(), reference,
-								triple.getThird());
-						
-						if (linkedObjects.isEmpty()) {
-							if (isUnresolveableProxyCacheable(triple))
-								unresolveableProxies.add(uriFragment);
-							createAndAddDiagnostic(triple);
-							return null;
-						}
-						if (linkedObjects.size() > 1)
-							throw new IllegalStateException("linkingService returned more than one object for fragment "
-									+ uriFragment);
-						EObject result = linkedObjects.get(0);
-						if (!EcoreUtil2.isAssignableFrom(reference.getEReferenceType(), result.eClass())) {
-							log.error("An element of type " + result.getClass().getName()
-									+ " is not assignable to the reference " + reference.getEContainingClass().getName()
-									+ "." + reference.getName());
-							if (isUnresolveableProxyCacheable(triple))
-								unresolveableProxies.add(uriFragment);
-							createAndAddDiagnostic(triple);
-							return null;
-						}
+					List<EObject> linkedObjects = getLinkingService().getLinkedObjects(
+							triple.getFirst(), 
+							reference,
+							triple.getThird());
 
-						// remove previously added error markers, since everything should be fine now
-						unresolveableProxies.remove(uriFragment);
-						removeDiagnostic(triple);
-						return result;
-				} catch (IllegalNodeException ex){
+					if (linkedObjects.isEmpty()) {
+						if (isUnresolveableProxyCacheable(triple))
+							unresolveableProxies.add(uriFragment);
+						createAndAddDiagnostic(triple);
+						return null;
+					}
+					if (linkedObjects.size() > 1)
+						throw new IllegalStateException("linkingService returned more than one object for fragment "
+								+ uriFragment);
+					EObject result = linkedObjects.get(0);
+					if (!EcoreUtil2.isAssignableFrom(reference.getEReferenceType(), result.eClass())) {
+						log.error("An element of type " + result.getClass().getName()
+								+ " is not assignable to the reference " + reference.getEContainingClass().getName()
+								+ "." + reference.getName());
+						if (isUnresolveableProxyCacheable(triple))
+							unresolveableProxies.add(uriFragment);
+						createAndAddDiagnostic(triple);
+						return null;
+					}
+
+					// remove previously added error markers, since everything should be fine now
+					unresolveableProxies.remove(uriFragment);
+					removeDiagnostic(triple);
+					return result;
+				} catch (IllegalNodeException ex) {
 					createAndAddDiagnostic(triple, ex);
 				} finally {
 					resolving.remove(triple);
@@ -383,5 +380,31 @@ public class LazyLinkingResource extends XtextResource {
 
 	public void setLinkingHelper(LinkingHelper linkingHelper) {
 		this.linkingHelper = linkingHelper;
+	}
+
+	/**
+	 * Marks the given proxy as unresolvable. Further attempts to resolve it by means of {@link #getEObject(String)}
+	 * will yield <code>null</code>.
+	 * @since 2.4
+	 */
+	public void markUnresolvable(EObject referenced) {
+		if (!referenced.eIsProxy()) {
+			throw new IllegalArgumentException("Cannot mark an instance as unresolvable if it is already resolved");
+		}
+		URI proxyURI = ((InternalEObject)referenced).eProxyURI();
+		getUnresolvableURIFragments().add(proxyURI.fragment());
+	}
+	
+	/**
+	 * @since 2.4
+	 */
+	protected Set<String> getUnresolvableURIFragments() {
+		Set<String> unresolveableProxies = getCache().get(UNRESOLVEABLE_PROXIES_KEY, this,
+				new Provider<Set<String>>() {
+					public Set<String> get() {
+						return Sets.newHashSet();
+					}
+				});
+		return unresolveableProxies;
 	}
 }
